# protobuffer_communication

./: .gitignore  .gitmodules  CMakeLists.txt  config  start.sh
_proto/: message.pb.h  message.proto
_src/: main.cpp
_test/: test.cpp
scripts/: clear_core_dump.sh  formating_hook.sh  production.sh  run.sh
